--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ boost/
 .vs/
 out/
 CMakeSettings.json
+debian/.debhelper
+debian/files
+debian/debhelper-build-stamp
+debian/tmp
+debian/elite-cs-series-sdk/
+debian/*.log
+debian/*.substvars
