Adjust the copy log interface and the remote upgrade interface to be exclusive to Linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,10 @@ find_package(Boost)
 if(NOT BOOST_FOUND)
     message(AUTHOR_WARNING "Not found boost library. Subsequent compilations may fail.")
 endif()
+# TODO:Windows support
+if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    find_package(libssh REQUIRED)
+endif()
 
 configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/include/EliteOptions.hpp.in
@@ -109,7 +113,9 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     message(STATUS "SYSTEM: Linux")
     set(SYSTEM_LIB pthread)
-    set(THIRDPARTY_LIB ssh)
+    if(libssh_FOUND)
+        set(THIRDPARTY_LIB ${THIRDPARTY_LIB} ssh)
+    endif()
 else()
     message(FATAL_ERROR "Unsupport operating system")
 endif()
@@ -244,3 +250,4 @@ message(STATUS "CMAKE_C_FLAGS:                      ${CMAKE_C_FLAGS}")
 message(STATUS "CMAKE_CXX_FLAGS:                    ${CMAKE_CXX_FLAGS}")
 message(STATUS "CMAKE_INSTALL_INCLUDEDIR:           ${CMAKE_INSTALL_INCLUDEDIR}")
 message(STATUS "CMAKE_INSTALL_LIBDIR:               ${CMAKE_INSTALL_LIBDIR}")
+message(STATUS "THIRDPARTY_LIB                      ${THIRDPARTY_LIB}")
