Add execute cmd on server without libssh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     set(SYSTEM_LIB pthread)
     if(libssh_FOUND)
         set(THIRDPARTY_LIB ${THIRDPARTY_LIB} ssh)
+        add_definitions(-DELITE_USE_LIB_SSH)
     endif()
 else()
     message(FATAL_ERROR "Unsupport operating system")
