--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,14 +23,11 @@ else()
 endif()
 
 # Find third-party library
-find_package(GTest)
-find_package(Boost)
-if(NOT BOOST_FOUND)
-    message(AUTHOR_WARNING "Not found boost library. Subsequent compilations may fail.")
-endif()
-# TODO:Windows support
-if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    find_package(libssh REQUIRED)
+find_package(Boost REQUIRED)
+find_package(libssh)
+if(libssh_FOUND)
+        set(THIRDPARTY_LIB ${THIRDPARTY_LIB} ssh)
+        add_definitions(-DELITE_USE_LIB_SSH)
 endif()
 
 configure_file(
@@ -113,10 +110,6 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     message(STATUS "SYSTEM: Linux")
     set(SYSTEM_LIB pthread)
-    if(libssh_FOUND)
-        set(THIRDPARTY_LIB ${THIRDPARTY_LIB} ssh)
-        add_definitions(-DELITE_USE_LIB_SSH)
-    endif()
 else()
     message(FATAL_ERROR "Unsupport operating system")
 endif()
@@ -193,7 +186,7 @@ if(ELITE_COMPILE_DOC)
 endif()
 
 # If googel test has been foune, compile unit test
-if (GTEST_FOUND AND ELITE_COMPILE_TESTS)
+if (ELITE_COMPILE_TESTS)
     message(STATUS "Compile the tests")
     add_subdirectory(test ${CMAKE_BINARY_DIR}/test/)
 endif()
